# url-shorter

./: .cursorrules  .env  Cargo.toml  LICENSE  README.md
src/: handlers.rs  main.rs  models.rs  utils.rs
static/: index.html  stats.html
static/css/: styles.css
static/js/: main.js  stats.js
