[package]
name = "url-shorter"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4.0"
actix-files = "0.6.2"
mongodb = { version = "2.7.1", features = ["bson-chrono-0_4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.34.0", features = ["full"] }
rand = "0.8.5"
dotenv = "0.15.0"
env_logger = "0.10.1"
log = "0.4.20"
thiserror = "1.0.50"
futures = "0.3.29"
url = "2.4.1"
chrono = { version = "0.4", features = ["serde"] }
